force-app/main/default/objects/TabViews__c/TabViews__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Vues des écrans d&apos;accueil</label>
</CustomObject>