force-app/main/default/objects/TabViews__c/fields/default__c.field-meta.xml
<CustomField>
    <fullName>default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Par défaut</label>
    <type>Checkbox</type>
</CustomField>