force-app/main/default/objects/TabViews__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>