force-app/main/default/objects/TabViews__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Objet</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>