force-app/main/default/objects/TabViews__c/fields/orderBy__c.field-meta.xml
<CustomField>
    <fullName>orderBy__c</fullName>
    <label>Clause ORDER BY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>