force-app/main/default/objects/TabViews__c/fields/where__c.field-meta.xml
<CustomField>
    <fullName>where__c</fullName>
    <label>Clause WHERE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>